--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "https://github.com/LuizEduardoCardozo/node-clean-archteture.git",
   "author": "LuizEduardoCardozo <eduard.cardoz@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "git-commit-msg-linter": "^3.1.0"
+  }
 }
