--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "LuizEduardoCardozo <eduard.cardoz@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.1.0"
+    "@types/node": "^14.14.41",
+    "git-commit-msg-linter": "^3.1.0",
+    "typescript": "^4.2.4"
   }
 }
