--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "LuizEduardoCardozo <eduard.cardoz@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
@@ -15,7 +16,13 @@
     "eslint-plugin-promise": "4",
     "git-commit-msg-linter": "^3.1.0",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
+  },
+  "scripts": {
+    "test": "jest",
+    "test:staged": "jest"
   }
 }
