--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "typescript": "^4.2.4"
   },
   "scripts": {
-    "test": "jest",
-    "test:staged": "jest"
+    "test": "jest --silent --noStackTrace --runInBand",
+    "test:verbose": "jest --runInBand",
+    "test:unit": "jest -- --watch -c jest-unit-config.js",
+    "test:integration": "jest -- --watch -c jest-integration-config.js",
+    "test:staged": "yarn test -- --findRelatedTests",
+    "test:ci": "yarn test -- --coverage"
   }
 }
