--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "typescript": "^4.2.4"
   },
   "scripts": {
-    "test": "jest --noStackTrace --runInBand",
+    "test": "jest --runInBand",
     "test:verbose": "jest --runInBand",
     "test:unit": "jest -- --watch -c jest-unit-config.js",
     "test:integration": "jest -- --watch -c jest-integration-config.js",
