--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "LuizEduardoCardozo <eduard.cardoz@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
     "@types/validator": "^13.1.3",
@@ -31,6 +32,7 @@
     "test:ci": "yarn test -- --coverage"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "validator": "^13.5.2"
   }
 }
