--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "LuizEduardoCardozo <eduard.cardoz@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.4",
     "@types/bcrypt": "^3.0.1",
     "@types/jest": "^26.0.22",
+    "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.41",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "4",
@@ -33,6 +35,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "mongodb": "^3.6.6",
     "validator": "^13.5.2"
   }
 }
