--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.4",
     "@types/bcrypt": "^3.0.1",
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.41",
@@ -22,6 +23,7 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "sucrase": "^3.18.1",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   },
@@ -35,6 +37,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "validator": "^13.5.2"
   }
