--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.2.4"
   },
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --runInBand",
     "test:verbose": "jest --runInBand",
     "test:unit": "jest -- --watch -c jest-unit-config.js",
